Fixed scrollbar hide

--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -1,6 +1,9 @@
 body {
     background: #4c97ca;
-    overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 /*Header Content*/
